# little_try

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: ADD.cpp.A12E185CD7A53507.idx  ADD.h.8E1D952D3CA74747.idx  Logger.cpp.2A2A2F7B89226DD1.idx  Logger.h.1AEA6696AE2EA55E.idx  Singleton.h.18AE5EA4F5228388.idx  client.cpp.081EB82401CF3FA4.idx  client_socket.cpp.881D5D6DBA25D391.idx  client_socket.h.8F605A97C0F505E0.idx  echo_task.cpp.92E1DFFE3F02CA37.idx  echo_task.h.05F4FC8851BA8104.idx  event_poller.cpp.5AB9CE9D98C1B98F.idx  event_poller.h.F0A12160DE2E1CFD.idx  main.cpp.D45BE507A4CB97E6.idx  server2.cpp.79DB1603A482E296.idx  server2.cpp.A3AEBF63FACE5B1B.idx  server_socket.cpp.097AEE5EBEBFADAD.idx  server_socket.h.41B3F5F6263EB7FD.idx  socket.cpp.08799909BB6851A9.idx  socket.h.1FDFCD2ED3D9C98D.idx  socket_handler.cpp.FA5B2F099DC7BB94.idx  socket_handler.h.8E34EA01273F2237.idx
include/: add.h
src/: CMakeLists.txt  add.cpp  main.cpp
src/EventPoller/: CMakeLists.txt  event_poller.cpp
src/Socket/: CMakeLists.txt
src/SocketHandler/: CMakeLists.txt  socket_handler.cpp  socket_handler.h
src/Task/: CMakeLists.txt  echo_task.cpp  echo_task.h
src/app/: CMakeLists.txt  basicserver.cpp  server.cpp
src/utility/: CMakeLists.txt  Logger.cpp  Logger.h
